# portfolio2

./: .gitignore  README.md  hotfixes.txt  package-lock.json  package.json
api/: .dockerignore  README.md  default.conf  docker-compose.yml  package-lock.json  package.json
api/api/controllers/: EmailController.js  ProjectsController.js
api/api/helpers/: email.js
api/api/models/: Email.js  Projects.js  Users.js
api/assets/: Thumbs.db
api/aws_api/: .eslintrc  .gitignore  Dockerfile  log.txt  package-lock.json  package.json  server.js
api/aws_api/config/: auth.js  db.js  passport.js  s3.js
api/aws_api/controllers/: portal.js
api/aws_api/local/: file-repurposer.js
api/aws_api/prisma/: schema.prisma
api/aws_api/routes/: master.js  portal.js
api/aws_api/src/: server.js
api/aws_api/views/: layout.ejs  login.ejs  portal.ejs
api/client_api/: .gitignore  Cargo.toml  Dockerfile  Procfile  denon.json  server.ts
api/client_api/config/: db.ts  smtp.ts
api/client_api/controllers/: project-controller.ts
api/client_api/routes/: contact-routes.ts  project-routes.ts
api/client_api/src/: controllers.rs  main.rs  models.rs  routes.rs
api/client_api/src/config/: db.rs
api/client_api/src/controllers/: handling.rs  projects.rs
api/config/: custom.js  datastores.js  http.js  models.js  security.js  session.js
client/: .gitignore  package-lock.json  package.json
client/.netlify/: state.json
client/public/: index.html
client/src/: App.js
config/: session.js
react_client/: package-lock.json  package.json
react_client/src/: App.js
(+44 files in other folders)
