[package]
name = "client_api"
version = "0.1.0"
authors = ["alvarian <vitarka88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_cors = "0.5.2"
postgres = "0.19.0"
dotenv = "0.11.0"
rocket_contrib = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"